--- a/styles.css
+++ b/styles.css
@@ -1,79 +1,312 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900& display=swap");
-
-*{
+* {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
 }
-
-body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    background-image: url(/assets/background\ login.png);
-    background-position: center ;
-}
-
-.login-container {
-    background: transparent;
-    padding: 30px;
-    border-radius: 20px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.562);
-    height: 220px;
-    width: 100%;
-    max-width: 400px;
-    text-align: center;
-}
-
-.login-container h2{
-    margin-bottom: 10px;
-    font-size: 26px;
-    color: #fff;
-}
-
-.input-box {
-    width: 100%;
-    height: 30px;
-    margin: 5px;
-}
-.input-box i{
-    color: #fff;
-}
-
-.input-box input {
-    width: 90%;
-    height: 30px;
-    background: transparent;
-    border: none;
-    outline: none;
-    border: 2px solid rgba(255, 255, 255, .2);
-    border-radius: 30px;
-    padding-left: 10px ;
-    color: #fff;
-}
-.input-box input::placeholder {
-    color: #fff;
-}
-
-.remember-forgot{
+/*  ============= header navigation bar ============= */
+.wrapper{
+    background: rgba(255, 255, 255, .1);
     display: flex;
     justify-content: space-between;
-    margin-bottom: 10px;
-    padding-left: 30px;
+    height: 75px;
+}
+
+.wrapper:hover{
+    background: #a1d4ff;
+}
+
+header{
+    position: fixed;
+    width: 100%; 
+}
+
+header .wrapper{
+    padding: 0 2%;
+    display: flex;
+    align-items: center;
+}
+
+header a img{
+    width: 150px;
+    margin-top: 20px;
+    padding-bottom: 20px;
+}
+
+nav ul{
+    padding-left: 200px;
+}
+
+nav ul li{
+    display: inline;
+    margin-left: 10px; 
+}
+
+nav ul li a {
+    text-decoration: none;
+    color: white;
+    font-family: 'Poppins', sans-serif;
+    font-size: 18px;
+    padding: 5px;
+}
+
+nav ul li a:hover {
+    color: #333;
+}
+
+.login:hover{
+    padding: 8px 16px;
+    background-color: #00b2ff;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 20px;
+    font-weight: bold;
+}
+/*  ============= banner ============= */
+
+.banner {
+    width: 100%;
+    height: 100vh;
+    background-image: url(../assets/lepkom.jpg);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.banner-content {
+    padding: 0 10%;
+}
+
+.title {
+    background-color: rgba(140, 139, 139, 0.422);
+    color: white;
+    font-family: "Open Sans", sans-serif;
+    text-transform: uppercase;
+    font-size: 50px;
+    text-align: center;
+    padding-top: 5px;
+}
+/*  ============= card ============= */
+.jadwal{
+
+    width: 100%;
+    overflow: hidden;
+    position: relative;
+}
+
+.title-jadwal{
+    font-family: 'Poppins', sans-serif;
+    font-size: 30px;
+    text-align: center;
+    font-size: 24px;
+    font-weight: bold;
+    white-space: nowrap;
+    position: absolute;
+    animation: floatText 30s linear infinite;
+}
+
+@keyframes floatText {
+    0% {
+        left: -100%;
+    }
+    50% {
+        left: 100%;
+    }
+    100% {
+        left: -100%;
+    }
+}
+
+.card-container {
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+    padding-top: 50px;
+    padding-bottom: 10px;
+}
+
+.card {
+    background-color: #ffffff;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.420);
+    padding: 20px;
+    width: 300px;
+    height: 150px;
+    text-align: center;
+    position: relative;
+}
+
+.card:hover{
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.415);
+    transform: translateY(-10px);
+}
+
+h3 {
+    margin-top: 40px;
+    font-size: 18px;
+    color: #333;
+}
+
+.input-group {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+}
+
+.input-group input {
+    width: calc(100% - 50px);
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 5px 0 0 5px;
     font-size: 14px;
 }
 
-.login-container .button {
-    width: 30%;
-    background: #fff ;
-    border-radius: 50px ;
+.btn-check {
+    background-color: #005072;
     border: none;
+    border-radius: 0 5px 5px 0;
+    padding: 0 15px;
     cursor: pointer;
 }
 
+.btn-check i{
+    color: #f0f0f0;
+}
 
+/*  ============= categories ============= */
+.categories-container{
+    padding-bottom: 30px;
+}
 
-    
-   
+.categories-title{
+    display: flex;
+    margin: 110px;
+    font-family: 'Poppins', sans-serif;
+    font-size: 25px;
+    text-align: center;
+    margin-bottom: 30px;
+    justify-content: space-between;
+}
+
+.categories {
+    display: flex;
+    gap: 20px;
+    justify-content: center;
+}
+
+.category-card {
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.415);
+    padding: 20px;
+    text-align: center;
+    width: 150px;
+}
+
+.category-card:hover{
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.415);
+    transform: translateY(-10px);
+}
+
+.category-card img {
+    max-width: 100%;
+    height: auto;
+    margin-bottom: 10px;
+}
+
+.category-card p {
+    font-size: 18px;
+    font-weight: bold;
+    margin: 10px 0 5px;
+}
+
+.category-card span {
+    font-size: 14px;
+    color: gray;
+}
+/*  ============= rules ============= */
+.rules-container {
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: #c6e3ff;
+    width: 100%;
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+.rules-title {
+    font-size: 24px;
+    font-weight: bold;
+    color: #333333;
+    margin-bottom: 10px;
+}
+
+.rules-subtitle {
+    font-size: 18px;
+    color: #6a1b9a; 
+    margin-bottom: 20px;
+}
+
+.rules-icon i {
+    margin-bottom: 5px;
+}
+
+.rules-description {
+    font-size: 16px;
+    font-weight: bold;
+    color: #333333;
+    margin-bottom: 20px;
+}
+
+.download-button {
+    background-color: #008ac6; 
+    color: #ffffff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.download-button:hover {
+    background-color: #0071a1;
+}
+
+/*  ============= footer ============= */
+footer {
+    background-color: #333333; 
+    color: #ffffff; 
+    padding: 20px 0;
+    text-align: center;
+}
+
+footer .footer-wrapper {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 20px;
+}
+
+footer .social-media {
+    margin-bottom: 10px;
+}
+
+footer .social-media a {
+    margin: 0 10px;
+    color: #ffffff;
+    font-size: 24px;
+    text-decoration: none;
+    transition: color 0.3s ease;
+}
+
+footer .social-media a:hover {
+    color: #a1d4ff; 
+}
+
+footer p {
+    font-size: 14px;
+    margin-top: 10px;
+    color: #aaaaaa;
+}
+
